# gtkneofix

./: .gitignore  Makefile.am  README.md  configure.ac
src/: gtk_module.c  gtk_test_app.c  gtktestapp-gtk_test_app.d  libgtkneofix_gtk_module_la-gtk_module.lo
src/.deps/: gtktestapp-gtk_test_app.Po  libgtkneofix_gtk_module_la-gtk_module.Plo
